[package]
name = "tf-df"
version = "0.1.0"
edition = "2021"
authors = ["Martin van Harmelen <martin@vanharmelen.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"  # https://rust-lang-nursery.github.io/rust-cookbook/file/dir.html
clap = { version = "4", features = ["derive"] }
rayon = "1"  # https://rust-lang-nursery.github.io/rust-cookbook/concurrency/parallel.html#map-reduce-in-parallel
rustc-hash = "1"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1"
tar = "0.4.38"
spmc = "0.3.0"
num_cpus = "1"